# poc-type-family-flexible-param

./: CHANGELOG.md  LICENSE  poc-type-family-flexible-param.cabal
app/: Main.hs
src/: MyLib.hs
