cabal-version:      3.0
name:               poc-type-family-flexible-param
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Haisheng W - M
maintainer:         haisheng@mercury.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.1.0
    hs-source-dirs:   src
    default-language: GHC2021

executable poc-type-family-flexible-param
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.1.0,
        poc-type-family-flexible-param

    hs-source-dirs:   app
    default-language: GHC2021
